# agent-corps

./: fastapi_ray_backend.py  pyproject.toml  ray_cluster_manager.py  ray_mongodb_system.py  run_fastapi_streamlit_stack.py  run_streamlit_ray.py  run_worker_pool_dashboard.py  streamlit_ray_mongodb.py  streamlit_worker_pool_dashboard.py  task_logger.py  workflow_orchestrator.py
exploration/: README.md
exploration/a2a-mcp-txt2sql/: ARCHITECTURE_new.md  DEVELOPMENT.md  README.md  diagnostic_mcp.py  enhanced_orchestrator.py  fastapi_app.py  main.py  mcp_isolation.py  orchestrator.py  pyproject.toml  ruff.toml  simple_mcp_test.py  st_app.py  test_app_flow.py
exploration/a2a-mcp-txt2sql/agents/: sql_validation_agent.py
exploration/a2a-mcp-txt2sql/config/: mcp_config.json  settings.yaml
exploration/a2a-mcp-txt2sql/data/: Chinook_Sqlite.db
exploration/a2a-mcp-txt2sql/data/chroma/: create_db.py
exploration/a2a-mcp-txt2sql/docs/: A2A_PROPOSAL.md  ADDING_A2A_AGENTS.md  ADDING_MCP_SERVERS.md  ARCHITECTURE.md  ARCHITECTURE_old.MD
exploration/a2a-mcp-txt2sql/mcp_servers/: chroma_interface.py  mcp_factory.py  sqlite_interface.py
exploration/a2a-mcp-txt2sql/mcp_servers/mcp_servers_official/src/sqlite/data/: Chinook_Sqlite.db
exploration/a2a-mcp-txt2sql/mcp_servers/mcp_servers_official/src/sqlite/src/mcp_server_sqlite/: __init__.py  server.py
exploration/a2a-mcp-txt2sql/static/: app.js  index.html  styles.css
exploration/a2a-mcp-txt2sql/tests/: README.md  __init__.py  diagnostic_mcp.py  simple_mcp_test.py  test_app_flow.py
(+7 files in other folders)
