[project]
name = "a2a-mcp-txt2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.9",
    "fastapi>=0.115.9",
    "langchain>=0.3.25",
    "langgraph>=0.4.8",
    "mcp>=1.9.0",
    "mcp-use>=1.2.12",
    "psutil>=7.0.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
]
